library/src/libqvariant.h

typedef struct QVariant QVariant;
typedef struct QVariantConstPointer QVariantConstPointer;
QTLIBC_API QVariantConstPointer* QVariantConstPointer_new(QVariant* variant);
QTLIBC_API QVariantConstPointer* QVariantConstPointer_new2(QVariantConstPointer* param1);
QTLIBC_API QVariant* QVariantConstPointer_OperatorMultiply(const QVariantConstPointer* self);
QTLIBC_API QVariant* QVariantConstPointer_OperatorMinusGreater(const QVariantConstPointer* self);
QTLIBC_API void QVariantConstPointer_OperatorAssign(QVariantConstPointer* self, QVariantConstPointer* param1);
QTLIBC_API void QVariantConstPointer_Delete(QVariantConstPointer* self);