src/qt/libqvariant.bf

extension CQt
{
	[LinkName("QVariantConstPointer_new")]
	public static extern void* QVariantConstPointer_new(void variant);
	[LinkName("QVariantConstPointer_new2")]
	public static extern void* QVariantConstPointer_new2(void* param1);
	[LinkName("QVariantConstPointer_OperatorMultiply")]
	public static extern void QVariantConstPointer_OperatorMultiply(void* c_this);
	[LinkName("QVariantConstPointer_OperatorMinusGreater")]
	public static extern void* QVariantConstPointer_OperatorMinusGreater(void* c_this);
	[LinkName("QVariantConstPointer_OperatorAssign")]
	public static extern void QVariantConstPointer_OperatorAssign(void* c_this, void* param1);
	/// Delete this object from C++ memory
	[LinkName("QVariantConstPointer_Delete")]
	public static extern void QVariantConstPointer_Delete(void* self);
}